# Diploma

./: .gitignore  README  hsv.txt
Latex_source/: main.tex
PCL_test/devel/: .catkin  .rosinstall
PCL_test/devel/lib/my_pcl_tutorial/: example
PCL_test/devel/lib/pkgconfig/: my_pcl_tutorial.pc
PCL_test/devel/share/my_pcl_tutorial/cmake/: my_pcl_tutorialConfig.cmake
PCL_test/src/my_pcl_tutorial/: CMakeLists.txt
ROS/: README
ROS/devel/: .catkin  .rosinstall  setup.sh
ROS/devel/lib/main_thread/: main_thread_node
ROS/devel/lib/pkgconfig/: depth_image_proc.pc  main_thread.pc
ROS/devel/share/depth_image_proc/cmake/: depth_image_procConfig.cmake
ROS/src/detector/src/: detector.py
ROS/src/main_thread/: CMakeLists.txt  package.xml
ROS/src/main_thread/launch/: a.launch
ROS/src/main_thread/src/: plane_segm.cpp
ROS/src/pcl_processor/: CMakeLists.txt  package.xml
ROS/src/pcl_processor/src/: main_algorithm.cpp  main_algorithm.h  plane_checker.cpp
ROS_GrabCUt_experiment/src/detector/: package.xml
ROS_GrabCUt_experiment/src/detector/src/: detector.py
ROS_GrabCUt_experiment/src/pcl_processor/launch/: a.launch
ROS_GrabCUt_experiment/src/pcl_processor/src/: plane_checker.cpp
closed_loop/: detector-graph.py
detector_comparison/: README  dataset.py  det_GC.py  det_HSV.py  det_NN (copy).py  det_NN.py
hsv_tool/: ds_fix.py  hsv_tool.py  tr_val.py
hsv_tool/example/: Untitled Document  quality0png
new/: CMakeLists.txt  ConcaveHull.cpp  cluster.cpp  euc_cluster_extr.cpp  min_cut.cpp  planar_segmentation.cpp  segment.cpp  viewer.cpp  wrapped.cpp
pcl_alg/: CMakeLists.txt  README  euc_cluster_extr.cpp  gen_convex.cpp  smooth.cpp  viewer.cpp  wrapped.cpp
pics/: pics.odp
yola/: calc_mst.py  det.py  ds_fix.py  lab.py  network.py  roc.py  train.py
yolo/: README  dataset.py  lab.py  network.py  roc.py  train.py  utils.py
(+1 files in other folders)
